--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "js app",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,9 @@
     "url": "https://github.com/mishaqwerly/Wave-js/issues"
   },
   "homepage": "https://github.com/mishaqwerly/Wave-js#readme",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
