--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,5 @@
         "coma-dangle": "off",
         "require-jsdoc": "off"
     },
-    "extends": ["eslint:recommended", "google"],
+    "extends": ["eslint:recommended", "google"]
 }
